--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
 
         <!-- Main column -->
         <div id="content" class="col-md-12">
-          <h1>Welcome</h1>
-          <p>Here is some text that only goes on the home page,
-            because <code>@uri-path</code> is
-            <code>/index.html</code>.</p> 
+          <h1>Sup reader ? </h1>
+          <p class="display-5 font-weight-light">Idan Maman's Personal Blog <i class="fa-solid fa-xl fa-kiwi-bird fa-shake"></i></p> 
 
 
 
