--- a/About.html
+++ b/About.html
@@ -3,8 +3,8 @@
   <head>
 
     <meta charset="utf-8">
-    <title>About page</title>
-    <meta name="description" content="About page: Your about page, here....">
+    <title>About Me</title>
+    <meta name="description" content="About Me: LargerMy name is Idan , My age is 19 ,and  I have a Bs.c in computer science and I am seeking to learn new cool stuff especially low level. This blog created from my own learning - any fixing or improvments can be sent throught pr or issue in th...">
     <meta name="author"      content="Idan Maman">
     <meta name="keywords"    content="">
     <meta name="viewport"    content="width=device-width, initial-scale=1.0">
@@ -97,9 +97,42 @@
 
 
 
-<h1 id="about-page">About page</h1>
+<h1><a name="(part._.About_.Me)"></a>About Me</h1>
 
-<p>Your about page, here.</p>
+<blockquote class="SCentered">
+ <p><span style="font-weight: bold"><span class="Larger">LargerMy name is Idan , My age is 19 ,and  I have a Bs.c in computer science and I am seeking to learn new cool stuff especially low level.
+This blog created from my own learning - any fixing or improvments can be sent throught pr or issue in the github page <a href="https://github.com/idanmaman2/idanmaman2.github.io">Here</a>.
+Enjoy - IDK .
+
+    <br />
+
+    <br />
+Don&rsquo;t ask why everthing is in parrot theme - IDK I just like it .
+
+    <br />
+
+thanks to Racket , scribble and Frog for allowing me to create this cool blog .
+
+    <br />
+<img src="/About/pict.png" alt="image" height="121" style="vertical-align: 0px; margin: -3px -3px -3px -3px;" width="126" />
+</span></span></p></blockquote>
+
+<p>
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br /></p>
+
+<p>CV
+
+ <br />
+<a href="https://github.com/idanmaman2/idanmaman2.github.io"><img src="/About/pict_2.png" alt="image" height="66" style="vertical-align: 0px; margin: -3px -3px -3px -3px;" width="56" /></a></p>
         </div>
       </div>
       <footer>
