--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <title>About Me</title>
-    <meta name="description" content="About Me: LargerMy name is Idan , My age is 19 ,and  I have a Bs.c in computer science and I am seeking to learn new cool stuff especially low level. This blog created from my own learning - any fixing or improvments can be sent throught pr or issue in th...">
+    <meta name="description" content="About Me: My name is Idan , My age is 19 ,and  I have a Bs.c in computer science and I am seeking to learn new cool stuff especially low level. This blog created from my own learning - any fixing or improvments can be sent throught pr or issue in the gith...">
     <meta name="author"      content="Idan Maman">
     <meta name="keywords"    content="">
     <meta name="viewport"    content="width=device-width, initial-scale=1.0">
@@ -100,7 +100,7 @@
 <h1><a name="(part._.About_.Me)"></a>About Me</h1>
 
 <blockquote class="SCentered">
- <p><span style="font-weight: bold"><span class="Larger">LargerMy name is Idan , My age is 19 ,and  I have a Bs.c in computer science and I am seeking to learn new cool stuff especially low level.
+ <p><span style="font-weight: bold"><span class="Larger">My name is Idan , My age is 19 ,and  I have a Bs.c in computer science and I am seeking to learn new cool stuff especially low level.
 This blog created from my own learning - any fixing or improvments can be sent throught pr or issue in the github page <a href="https://github.com/idanmaman2/idanmaman2.github.io">Here</a>.
 Enjoy - IDK .
 
