--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -18,7 +18,7 @@
     (string-append uri-prefix
                    "/index.html"))
 
-    @list{<script type="module" src="@|uri-prefix|/_src/birdsbg.js"></script>}
+    @list{<script type="module" src="@|uri-prefix|/js/birdsbg.js"></script>}
     )
     <title>@|title|</title>
     <meta name="description" content="@|description|">
