--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
       }
     </script>
-    <script type="module" src="/_src/birds_bg.js"></script>
+    <script type="module" src="/js/birdsbg.js"></script>
     <title>IDHM.Blog</title>
     <meta name="description" content="IDHM.Blog">
     <meta name="author"      content="Idan Maman">
