--- a/About.html
+++ b/About.html
@@ -50,7 +50,7 @@
   <body>
 
     <!-- A standard Twitter Bootstrap nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark" style="background:linear-gradient(to right,#f90f0b,#f7ab4d,#fdfc0d,#0564b2,#60a3e6);">
+    <nav class="navbar navbar-expand-md navbar-dark" style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
       <div class="container">
 
         <a href="/index.html" class="navbar-brand">
@@ -74,7 +74,7 @@
               </a>
 
               <div class="dropdown-menu">
-                <a class="dropdown-item text-dark" href="/tags/M1.html">M1</a><a class="dropdown-item text-dark" href="/tags/M2.html">M2</a><a class="dropdown-item text-dark" href="/tags/Pwning.html">Pwning</a><a class="dropdown-item text-dark" href="/tags/Reversing.html">Reversing</a>
+                <a class="dropdown-item text-dark" href="/tags/Blog.html">Blog</a><a class="dropdown-item text-dark" href="/tags/Frog.html">Frog</a><a class="dropdown-item text-dark" href="/tags/M1.html">M1</a><a class="dropdown-item text-dark" href="/tags/M2.html">M2</a><a class="dropdown-item text-dark" href="/tags/MD.html">MD</a><a class="dropdown-item text-dark" href="/tags/Pwning.html">Pwning</a><a class="dropdown-item text-dark" href="/tags/Racket.html">Racket</a><a class="dropdown-item text-dark" href="/tags/Reversing.html">Reversing</a><a class="dropdown-item text-dark" href="/tags/Scribble.html">Scribble</a>
               </div>
             </li>
 
