--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>IDHM.Blog</title>
     <meta name="description" content="IDHM.Blog">
     <meta name="author"      content="Idan Maman">
-    <meta name="keywords"    content="Pwning, TEST, all, M1, Reversing, M2">
+    <meta name="keywords"    content="Frog, Pwning, Racket, M2, Blog, all, M1, Reversing, MD, Scribble">
     <meta name="viewport"    content="width=device-width, initial-scale=1.0">
     <link rel="icon"      href="/favicon.ico">
     <link rel="canonical" href="http://www.githu.com/index.html">
@@ -50,7 +50,7 @@
   <body>
 
     <!-- A standard Twitter Bootstrap nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark" style="background:linear-gradient(to right,#f90f0b,#f7ab4d,#fdfc0d,#0564b2,#60a3e6);">
+    <nav class="navbar navbar-expand-md navbar-dark" style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
       <div class="container">
 
         <a href="/index.html" class="navbar-brand">
@@ -74,7 +74,7 @@
               </a>
 
               <div class="dropdown-menu">
-                <a class="dropdown-item text-dark" href="/tags/M1.html">M1</a><a class="dropdown-item text-dark" href="/tags/M2.html">M2</a><a class="dropdown-item text-dark" href="/tags/Pwning.html">Pwning</a><a class="dropdown-item text-dark" href="/tags/Reversing.html">Reversing</a><a class="dropdown-item text-dark" href="/tags/TEST.html">TEST</a>
+                <a class="dropdown-item text-dark" href="/tags/Blog.html">Blog</a><a class="dropdown-item text-dark" href="/tags/Frog.html">Frog</a><a class="dropdown-item text-dark" href="/tags/M1.html">M1</a><a class="dropdown-item text-dark" href="/tags/M2.html">M2</a><a class="dropdown-item text-dark" href="/tags/MD.html">MD</a><a class="dropdown-item text-dark" href="/tags/Pwning.html">Pwning</a><a class="dropdown-item text-dark" href="/tags/Racket.html">Racket</a><a class="dropdown-item text-dark" href="/tags/Reversing.html">Reversing</a><a class="dropdown-item text-dark" href="/tags/Scribble.html">Scribble</a>
               </div>
             </li>
 
@@ -115,12 +115,12 @@
 
             <article style="margin-bottom:5vh;">
   <header>
-    <h2><a href='/2023/11/hi.html'>HI</a></h2>
+    <h2><a href='/2023/11/my-setup-for-apple-m1-2.html'>My setup for apple M1/2</a></h2>
     <table >
       <tbody>
         <tr>
           <th scope="row">Tags</th>
-          <td class="topics"><span class="tags"><a href="/tags/TEST.html">TEST</a></span></td>
+          <td class="topics"><span class="tags"><a href="/tags/M1.html">M1</a>, <a href="/tags/M2.html">M2</a>, <a href="/tags/Pwning.html">Pwning</a>, <a href="/tags/Reversing.html">Reversing</a></span></td>
         </tr>
         <tr>
           <th scope="row">Date&nbsp;</th>
@@ -136,17 +136,17 @@
   </header>
   <footer>
 
-    <button type="button" class="btn btn-warning" ><a href='/2023/11/hi.html' >read this article</a></button>
+    <button type="button" class="btn btn-warning" ><a href='/2023/11/my-setup-for-apple-m1-2.html' >read this article</a></button>
   </footer>
 </article>
 <article style="margin-bottom:5vh;">
   <header>
-    <h2><a href='/2023/11/my-setup-for-apple-m1-2.html'>My setup for apple M1/2</a></h2>
+    <h2><a href='/2023/11/hi-blog-setup.html'>HI - Blog setup</a></h2>
     <table >
       <tbody>
         <tr>
           <th scope="row">Tags</th>
-          <td class="topics"><span class="tags"><a href="/tags/M1.html">M1</a>, <a href="/tags/M2.html">M2</a>, <a href="/tags/Pwning.html">Pwning</a>, <a href="/tags/Reversing.html">Reversing</a></span></td>
+          <td class="topics"><span class="tags"><a href="/tags/Racket.html">Racket</a>, <a href="/tags/Frog.html">Frog</a>, <a href="/tags/Scribble.html">Scribble</a>, <a href="/tags/MD.html">MD</a>, <a href="/tags/Blog.html">Blog</a></span></td>
         </tr>
         <tr>
           <th scope="row">Date&nbsp;</th>
@@ -162,7 +162,7 @@
   </header>
   <footer>
 
-    <button type="button" class="btn btn-warning" ><a href='/2023/11/my-setup-for-apple-m1-2.html' >read this article</a></button>
+    <button type="button" class="btn btn-warning" ><a href='/2023/11/hi-blog-setup.html' >read this article</a></button>
   </footer>
 </article>
 
