--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -49,7 +49,7 @@
   <body>
 
     <!-- A standard Twitter Bootstrap nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark" style="background:linear-gradient(to right,#f90f0b,#f7ab4d,#fdfc0d,#0564b2,#60a3e6);">
+    <nav class="navbar navbar-expand-md navbar-dark" style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
       <div class="container">
 
         <a href="@|uri-prefix|/index.html" class="navbar-brand"> 
