--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -49,7 +49,7 @@
   <body>
 
     <!-- A standard Twitter Bootstrap nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark" style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
+    <nav class="navbar navbar-expand-md navbar-dark" style="margin-bottom:5vh;box-shadow: 10px 10px lightblue; background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
       <div class="container">
 
         <a href="@|uri-prefix|/index.html" class="navbar-brand"> 
@@ -100,9 +100,7 @@
               <a class="nav-link text-dark" href="@|atom-feed-uri|">Atom</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link text-dark" href="@|rss-feed-uri|">RSS</a>
-            </li>
+            
           </ul>
       </div>
 
@@ -129,7 +127,7 @@
                                                "/index.html"))
               @list{
                 <h1>Sup reader ? </h1>
-                <p class="display-5 font-weight-light">Idan Maman's Personal Blog <i class="fa-solid fa-xl fa-kiwi-bird fa-shake"></i></p> })
+                <p class="display-5 font-weight-light">Idan Maman's Personal Blog <i class="fa-solid fa-xl fa-kiwi-bird "></i></p> })
             @;{ Index pages for posts have @tag that's not #f }
             @(when tag
               @list{<h1>Posts tagged <em>@|tag|</em></h1>})
@@ -175,5 +173,10 @@
     <!-- </body> JS -->
     <script type="text/javascript" src="@|uri-prefix|/js/jquery-3.2.1.slim.min.js"></script>
     <script type="text/javascript" src="@|uri-prefix|/js/bootstrap.bundle.min.js"></script>
+    <script>
+      function myFunction() {
+        console.log("IDK")
+      }
+      </script>
   </body>
 </html>
