--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </nav>
 
 
-    <div class="container">
+    <div >
 
 
       <div style="position: relative;width: 100%; height: 100%">
@@ -102,11 +102,11 @@
           <canvas id="myCanvas" style="width: 100%; height: 100%"></canvas>
         </div>
 
-        <div  style="position: absolute; top: 0; left: 0;width: 100%; height: 100%" class="row">
+        <div class="container"  style="margin-left:10vw; position: absolute; top: 0; left: 0;width: 100%; height: 100%" class="row">
 
           <!-- Main column -->
           <div id="content" class="col-md-12">
-            <h1>Sup reader ? </h1>
+            <h1>SUPDAWG? </h1>
             <p class="display-5 font-weight-light">Idan Maman's Personal Blog <i class="fa-solid fa-xl fa-kiwi-bird "></i></p> 
 
 
