--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -49,7 +49,7 @@
   <body>
 
     <!-- A standard Twitter Bootstrap nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark" style="margin-bottom:5vh;box-shadow: 10px 10px lightblue; background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
+    <nav class="navbar navbar-expand-md navbar-dark" style="box-shadow: 10px 10px lightblue; background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
       <div class="container">
 
         <a href="@|uri-prefix|/index.html" class="navbar-brand"> 
@@ -116,7 +116,7 @@
           <canvas id="myCanvas" style="width: 100%; height: 100%"></canvas>
         </div>
   
-        <div class="container"  style="margin-left:10vw; position: absolute; top: 0; left: 0;width: 100%; height: 100%" class="row">
+        <div class="container"  style="margin-top:5vh;margin-left:10vw; position: absolute; top: 0; left: 0;width: 100%; height: 100%" class="row">
           @;{ Remember that Twitter Bootstrap has a 12 cell model. The
               col-md-N classes should add up to 12.  For instance 3
               "col-md-4" divs, or 2 "col-md-6" divs. }
