--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -135,7 +135,7 @@
             @|contents|
             
           </div>
-          <footer>
+          <footer style="margin-bottom:5vh;">
             <hr />
            @(define (share-follow-button social_name link)
             (let ([a "hello world"])
