--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 </article>
 
           </div>
-          <footer>
+          <footer style="margin-bottom:5vh;">
             <hr />
             <p ><a  href="https://t.me/IdanMaman" target="blank" title="social telegram"><i class="fa-brands fa-bounce fa-xl  fa-telegram"></i></a>
                 <a  href="https://github.com/idanmaman2" target="blank" title="social github"><i class="fa-brands fa-bounce fa-xl  fa-github"></i></a>
