--- a/About.html
+++ b/About.html
@@ -144,7 +144,7 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
 <a href="https://github.com/idanmaman2/idanmaman2.github.io"><img src="/About/pict_2.png" alt="image" height="66" style="vertical-align: 0px; margin: -3px -3px -3px -3px;" width="56" /></a></p>
 
           </div>
-          <footer>
+          <footer style="margin-bottom:5vh;">
             <hr />
             <p ><a  href="https://t.me/IdanMaman" target="blank" title="social telegram"><i class="fa-brands fa-bounce fa-xl  fa-telegram"></i></a>
                 <a  href="https://github.com/idanmaman2" target="blank" title="social github"><i class="fa-brands fa-bounce fa-xl  fa-github"></i></a>
