--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -49,7 +49,7 @@
   <body>
 
     <!-- A standard Twitter Bootstrap nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark" style="box-shadow: 10px 10px lightblue; background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
+    <nav class="navbar navbar-expand-md navbar-dark" style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
       <div class="container">
 
         <a href="@|uri-prefix|/index.html" class="navbar-brand"> 
