--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -116,7 +116,7 @@
           <canvas id="myCanvas" style="width: 100%; height: 100%"></canvas>
         </div>
   
-        <div class="container"  style="margin-top:5vh;margin-left:10vw; position: absolute; top: 0; left: 0;width: 100%; height: 100%" class="row">
+        <div class="container content_show"  style="margin-top:5vh;position: absolute; top: 0; left: 0;width: 100%; height: 100%" class="row">
           @;{ Remember that Twitter Bootstrap has a 12 cell model. The
               col-md-N classes should add up to 12.  For instance 3
               "col-md-4" divs, or 2 "col-md-6" divs. }
