--- a/About.html
+++ b/About.html
@@ -102,7 +102,7 @@
           <canvas id="myCanvas" style="width: 100%; height: 100%"></canvas>
         </div>
 
-        <div class="container content_show"  style="margin-top:5vh;position: absolute; top: 0; left: 0;width: 100%; height: 100%" class="row">
+        <div class="container content_show"  style="margin-bottom:5vh;margin-top:5vh;position: absolute; top: 0; left: 0;width: 100%; height: 100%" class="row">
 
           <!-- Main column -->
           <div id="content" class="col-md-12">
@@ -144,7 +144,7 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
 <a href="https://github.com/idanmaman2/idanmaman2.github.io"><img src="/About/pict_2.png" alt="image" height="66" style="vertical-align: 0px; margin: -3px -3px -3px -3px;" width="56" /></a></p>
 
           </div>
-          <footer style="margin-bottom:5vh;">
+          <footer >
             <hr />
             <p ><a  href="https://t.me/IdanMaman" target="blank" title="social telegram"><i class="fa-brands fa-bounce fa-xl  fa-telegram"></i></a>
                 <a  href="https://github.com/idanmaman2" target="blank" title="social github"><i class="fa-brands fa-bounce fa-xl  fa-github"></i></a>
