--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -114,7 +114,7 @@
   <div>
     <div style="position: relative;width: 100%; height: 100%">
       <div style="position: fixed;width: 100%; height: 100%">
-        <canvas id="myCanvas" style="width: 100%; height: 100%"></canvas>
+        <canvas id="myCanvas" style="touch-action:none;width: 100%; height: 100%"></canvas>
       </div>
 
       <div class="container content_show"
