--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
 
 
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap-5.3.2-dist 2/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/pygments.css">
   <link rel="stylesheet" type="text/css" href="/css/scribble.css">
   <link rel="stylesheet" type="text/css" href="/css/custom.css">
@@ -59,8 +59,8 @@
         <span class="gradient-text">IDHM's Blog</span>
       </a>
 
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-        data-target="#navbar_collapse" aria-controls="navbar_collapse" aria-expanded="false"
+      <button class="navbar-toggler navbar-toggler-right"  data-bs-toggle="collapse"
+      href="#navbar_collapse" aria-controls="navbar_collapse" role="button" aria-expanded="false"
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -70,7 +70,7 @@
 
 
             <li class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle text-dark" data-toggle="dropdown">
+              <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" >
                 Tags <b class="caret"></b>
               </a>
 
@@ -154,7 +154,7 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
           <p>Site generated
             by <a href="https://github.com/greghendershott/frog">Frog</a>,
             the <strong>fr</strong>ozen bl<strong>og</strong> tool.</p>
-          <p>Using <a href="http://twitter.github.com/bootstrap/index.html">Bootstrap</a>.</p>
+          <p>Using <a href="https://getbootstrap.com/docs/5.2/content/typography/">Bootstrap 5.3.2</a>.</p>
           <p><em>All the content is under the MIT license use it how u want how much u want </em>.</p>
         </footer>
       </div>
@@ -165,8 +165,7 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
 
   </div>
   <!-- </body> JS -->
-  <script type="text/javascript" src="/js/jquery-3.2.1.slim.min.js"></script>
-  <script type="text/javascript" src="/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="css/bootstrap-5.3.2-dist 2/js/bootstrap.bundle.min.js"></script>
   <script>
     function myFunction() {
       console.log("IDK")
