--- a/About.html
+++ b/About.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <script type="importmap">
       {
@@ -13,7 +12,7 @@
         }
       }
     </script>
-
+  <script type="module" src="/js/birdsbg.js"></script>
   <title>About Me</title>
   <meta name="description" content="About Me: My name is Idan , My age is 19 ,and  I have a Bs.c in computer science and I am seeking to learn new cool stuff especially low level. This blog created from my own learning - any fixing or improvments can be sent throught pr or issue in the gith...">
   <meta name="author" content="Idan Maman">
@@ -32,81 +31,62 @@
   <link href="/css/fontawesome-free-6.4.2-web/css/fontawesome.css" rel="stylesheet">
   <link href="/css/fontawesome-free-6.4.2-web/css/brands.css" rel="stylesheet">
   <link href="/css/fontawesome-free-6.4.2-web/css/solid.css" rel="stylesheet">
-  <!-- Feeds -->
-  <link rel="alternate" type="application/atom+xml" href="/feeds/all.atom.xml" title="Atom Feed">
-  <link rel="alternate" type="application/rss+xml" href="/feeds/all.rss.xml" title="RSS Feed">
-  <!-- JS -->
-  <script type="text/javascript">
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-xxxxx', 'auto');
-    ga('send', 'pageview');
-  </script>
 </head>
 
 <body>
 
-  <!-- A standard Twitter Bootstrap nav bar -->
-  <nav class="navbar navbar-expand-md navbar-dark"
-    style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
-    <div class="container">
 
-      <a href="/index.html" class="navbar-brand">
-        <img src="/img/logo_clear.png" alt="logo" width="100" height="100">
-        <span class="gradient-text">IDHM's Blog</span>
-      </a>
-
-      <button class="navbar-toggler navbar-toggler-right"  data-bs-toggle="collapse"
-      href="#navbar_collapse" aria-controls="navbar_collapse" role="button" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse " id="navbar_collapse">
-        <ul class="navbar-nav mr-auto">
-
-            <li class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" >
-                Tags <b class="caret"></b>
-              </a>
-
-              <div class="dropdown-menu">
-                <a class="dropdown-item text-dark" href="/tags/Blog.html">Blog</a><a class="dropdown-item text-dark" href="/tags/Frog.html">Frog</a><a class="dropdown-item text-dark" href="/tags/M1.html">M1</a><a class="dropdown-item text-dark" href="/tags/M2.html">M2</a><a class="dropdown-item text-dark" href="/tags/MD.html">MD</a><a class="dropdown-item text-dark" href="/tags/Pwning.html">Pwning</a><a class="dropdown-item text-dark" href="/tags/Racket.html">Racket</a><a class="dropdown-item text-dark" href="/tags/Reversing.html">Reversing</a><a class="dropdown-item text-dark" href="/tags/Scribble.html">Scribble</a>
-              </div>
-            </li>
-
-            <li
-             class=" active">
-              <a class="nav-link text-dark" href="/About.html" >About</a>
-              </li> 
-
-            <li class="nav-item">
-              <a class="nav-link text-dark" href="/feeds/all.atom.xml">Atom</a>
-            </li>
-
-
-        </ul>
-      </div>
-
-    </div>
-  </nav>
-
-  <div>
-    <div style="position: relative;width: 100%; height: 100%">
+  <div style="position: relative;width: 100%; height: 100%">
+    <div>
       <div style="position: fixed;width: 100%; height: 100%">
         <canvas id="myCanvas" style="touch-action:none;width: 100%; height: 100%"></canvas>
       </div>
+      <div class="position: absolute; top: 0; left: 0;width: 100%; height: 100%">
 
-      <div class="container content_show"
-        style="margin-bottom:5vh;margin-top:5vh;position: absolute; top: 0; left: 0;width: 100%; height: 100%"
-        class="row">
 
-        <!-- Main column -->
-        <div id="content" class="col-md-12">
+        <!-- A standard Twitter Bootstrap nav bar -->
+        <nav class="navbar navbar-expand-md navbar-dark"
+          style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
+          <div class="container">
 
+            <a href="/index.html" class="navbar-brand">
+              <img src="/img/logo_clear.png" alt="logo" width="100" height="100">
+              <span class="gradient-text">IDHM's Blog</span>
+            </a>
+
+            <button class="navbar-toggler navbar-toggler-right" data-bs-toggle="collapse" href="#navbar_collapse"
+              aria-controls="navbar_collapse" role="button" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse " id="navbar_collapse">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                  <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">
+                    Tags <b class="caret"></b>
+                  </a>
+
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item text-dark" href="/tags/Blog.html">Blog</a><a class="dropdown-item text-dark" href="/tags/Frog.html">Frog</a><a class="dropdown-item text-dark" href="/tags/M1.html">M1</a><a class="dropdown-item text-dark" href="/tags/M2.html">M2</a><a class="dropdown-item text-dark" href="/tags/MD.html">MD</a><a class="dropdown-item text-dark" href="/tags/Pwning.html">Pwning</a><a class="dropdown-item text-dark" href="/tags/Racket.html">Racket</a><a class="dropdown-item text-dark" href="/tags/Reversing.html">Reversing</a><a class="dropdown-item text-dark" href="/tags/Scribble.html">Scribble</a>
+                  </div>
+                </li>
+
+                <li  class=" active">
+                  <a class="nav-link text-dark" href="/About.html" >About</a>
+                </li> 
+
+              </ul>
+            </div>
+
+          </div>
+        </nav>
+        <div>
+
+
+          <div class="container" style="margin-bottom:5vh;margin-top:5vh;" class="row">
+            <!-- Main column -->
+            <div id="content" class="col-md-12">
 
 
 
@@ -142,35 +122,31 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
 
  <br />
 <a href="https://github.com/idanmaman2/idanmaman2.github.io"><img src="/About/pict_2.png" alt="image" height="66" style="vertical-align: 0px; margin: -3px -3px -3px -3px;" width="56" /></a></p>
-        <footer>
-          <hr />
-          <p><a href="https://t.me/IdanMaman" target="blank" title="social telegram"><i
-                 class="fa-brands fa-bounce fa-xl  fa-telegram"></i></a>
-             <a href="https://github.com/idanmaman2" target="blank" title="social github"><i
-                 class="fa-brands fa-bounce fa-xl  fa-github"></i></a>
-             <a href="https://twitter.com/idanmaman451180" target="blank" title="social twitter"><i
-                 class="fa-brands fa-bounce fa-xl  fa-twitter"></i></a>
-          </p>
-          <p>Site generated
-            by <a href="https://github.com/greghendershott/frog">Frog</a>,
-            the <strong>fr</strong>ozen bl<strong>og</strong> tool.</p>
-          <p>Using <a href="https://getbootstrap.com/docs/5.2/content/typography/">Bootstrap 5.3</a>.</p>
-          <p><em>All the content is under the MIT license use it how u want how much u want </em>.</p>
-        </footer>
+              <footer>
+                <hr />
+                <p><a href="https://t.me/IdanMaman" target="blank" title="social telegram"><i
+                       class="fa-brands fa-bounce fa-xl  fa-telegram"></i></a>
+                   <a href="https://github.com/idanmaman2" target="blank" title="social github"><i
+                       class="fa-brands fa-bounce fa-xl  fa-github"></i></a>
+                   <a href="https://twitter.com/idanmaman451180" target="blank" title="social twitter"><i
+                       class="fa-brands fa-bounce fa-xl  fa-twitter"></i></a>
+                </p>
+                <p>Site generated
+                  by <a class="link-warning" href="https://github.com/greghendershott/frog">Frog</a>,
+                  the <strong>fr</strong>ozen bl<strong>og</strong> tool.</p>
+                <p>Using <a class="link-warning" href="https://getbootstrap.com/docs/5.2/content/typography/">Bootstrap
+                    5.3</a>.</p>
+                <p><em>All the content is under the MIT license use it how u want how much u want </em>.</p>
+              </footer>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-
-
-
-  </div>
-  <!-- </body> JS -->
-  <script type="text/javascript" src="css/bootstrap-5.3.2-dist 2/js/bootstrap.bundle.min.js"></script>
-  <script>
-    function myFunction() {
-      console.log("IDK")
-    }
-  </script>
+    <!-- </body> JS -->
+    <script type="text/javascript" src="css/bootstrap-5.3.2-dist 2/js/bootstrap.bundle.min.js"></script>
+    <script>
+    </script>
 </body>
 
 </html>
