--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -2,9 +2,6 @@
 <html lang="en">
 
 <head>
-  @;{ The at-exp reader for a template treats this as a comment.
-  Also, notice the use template variables like @title,
-  @description etc. }
   <meta charset="utf-8">
   <script type="importmap">
       {
@@ -15,9 +12,17 @@
         }
       }
     </script>
-  @(when (string-ci=? uri-path
+  @(when
+
+  (or
+  (string-ci=? uri-path
   (string-append uri-prefix
   "/index.html"))
+
+  (string-ci=? uri-path
+  (string-append uri-prefix
+  "/About.html"))
+  )
 
   @list{
   <script type="module" src="@|uri-prefix|/js/birdsbg.js"></script>}
@@ -42,147 +47,123 @@
   <link href="@|uri-prefix|/css/fontawesome-free-6.4.2-web/css/fontawesome.css" rel="stylesheet">
   <link href="@|uri-prefix|/css/fontawesome-free-6.4.2-web/css/brands.css" rel="stylesheet">
   <link href="@|uri-prefix|/css/fontawesome-free-6.4.2-web/css/solid.css" rel="stylesheet">
-  <!-- Feeds -->
-  <link rel="alternate" type="application/atom+xml" href="@|atom-feed-uri|" title="Atom Feed">
-  <link rel="alternate" type="application/rss+xml" href="@|rss-feed-uri|" title="RSS Feed">
-  <!-- JS -->
-  @google-universal-analytics["UA-xxxxx"]
+
 </head>
 
 <body>
 
-  <!-- A standard Twitter Bootstrap nav bar -->
-  <nav class="navbar navbar-expand-md navbar-dark"
-    style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
-    <div class="container">
 
-      <a href="@|uri-prefix|/index.html" class="navbar-brand">
-        <img src="@|uri-prefix|/img/logo_clear.png" alt="logo" width="100" height="100">
-        <span class="gradient-text">IDHM's Blog</span>
-      </a>
-
-      <button class="navbar-toggler navbar-toggler-right"  data-bs-toggle="collapse" 
-      href="#navbar_collapse" aria-controls="navbar_collapse" role="button" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse " id="navbar_collapse">
-        <ul class="navbar-nav mr-auto">
-          @;{ We can define Racket functions to "DRY". Here's one to
-          emit HMTL for a nav item, adding class="active" iff
-          this page's @|uri-path| is the same as the nav link. }
-          @(define (ni uri label [a-attribs ""])
-          @list{
-          <li
-          @(when (string-ci=? uri uri-path) " class=\" active\"")>
-            <a class="nav-link text-dark" href="@|uri|" @|a-attribs|>@|label|</a>
-            </li> })
-
-
-            @;{ Here we craft the dropdown links from a list of pairs.
-            The pairs are in the format '((name . url) ...) }
-
-            @(define (craft-tag-links listof-pairs)
-            @(map (lambda (pair)
-            @list{<a class="dropdown-item text-dark" href="@(cdr pair)">@(car pair)</a>})
-            listof-pairs))
-
-            <li class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" >
-                Tags <b class="caret"></b>
-              </a>
-
-              <div class="dropdown-menu">
-                @craft-tag-links[(all-tag-pairs)]
-              </div>
-            </li>
-
-            @ni[(string-append uri-prefix "/About.html") "About"]
-
-            <li class="nav-item">
-              <a class="nav-link text-dark" href="@|atom-feed-uri|">Atom</a>
-            </li>
-
-
-        </ul>
-      </div>
-
-    </div>
-  </nav>
-
-  <div>
-    <div style="position: relative;width: 100%; height: 100%">
+  <div style="position: relative;width: 100%; height: 100%">
+    <div>
       <div style="position: fixed;width: 100%; height: 100%">
         <canvas id="myCanvas" style="touch-action:none;width: 100%; height: 100%"></canvas>
       </div>
+      <div class="position: absolute; top: 0; left: 0;width: 100%; height: 100%">
 
-      <div class="container content_show"
-        style="margin-bottom:5vh;margin-top:5vh;position: absolute; top: 0; left: 0;width: 100%; height: 100%"
-        class="row">
-        @;{ Remember that Twitter Bootstrap has a 12 cell model. The
-        col-md-N classes should add up to 12. For instance 3
-        "col-md-4" divs, or 2 "col-md-6" divs. }
-        <!-- Main column -->
-        <div id="content" class="col-md-12">
-          @(when (string-ci=? uri-path
-          (string-append uri-prefix
-          "/index.html"))
-          @list{
-          <div class="mb-5">
-            <h1 class="display-5">SUPDAWG? </h1>
-            <p class="h5 mt-2 font-weight-light">Idan Maman's Personal Blog <i class="fa-solid fa-xl fa-kiwi-bird "></i>
-            </p>
+
+        <!-- A standard Twitter Bootstrap nav bar -->
+        <nav class="navbar navbar-expand-md navbar-dark"
+          style="background:conic-gradient(#fd6666 0deg, #fd6666 72deg, #ffc556 72deg, #ffc556 144deg, #75fd71 144deg, #75fd71 216deg, #5d97fb 216deg , #5d97fb 288deg , #7dcaf9 288deg);">
+          <div class="container">
+
+            <a href="@|uri-prefix|/index.html" class="navbar-brand">
+              <img src="@|uri-prefix|/img/logo_clear.png" alt="logo" width="100" height="100">
+              <span class="gradient-text">IDHM's Blog</span>
+            </a>
+
+            <button class="navbar-toggler navbar-toggler-right" data-bs-toggle="collapse" href="#navbar_collapse"
+              aria-controls="navbar_collapse" role="button" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse " id="navbar_collapse">
+              <ul class="navbar-nav mr-auto">
+                @(define (ni uri label [a-attribs ""])
+                @list{
+                <li @(when (string-ci=? uri uri-path) " class=\" active\"")>
+                  <a class="nav-link text-dark" href="@|uri|" @|a-attribs|>@|label|</a>
+                </li> })
+                @(define (craft-tag-links listof-pairs)
+                @(map (lambda (pair)
+                @list{<a class="dropdown-item text-dark" href="@(cdr pair)">@(car pair)</a>})
+                listof-pairs))
+
+                <li class="nav-item dropdown">
+                  <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">
+                    Tags <b class="caret"></b>
+                  </a>
+
+                  <div class="dropdown-menu">
+                    @craft-tag-links[(all-tag-pairs)]
+                  </div>
+                </li>
+
+                @ni[(string-append uri-prefix "/About.html") "About"]
+
+              </ul>
+            </div>
+
           </div>
-          })
-          @;{ Index pages for posts have @tag that's not #f }
-          @(when tag
-          @list{<h1>Posts tagged <em>@|tag|</em></h1>})
-          @;{ The main page contents are in @contents }
-          @|contents|
-        <footer>
-          <hr />
-          @(define (share-follow-button social_name link)
-          (let ([a "hello world"])
-          @list{
-          <a href="@|link|" target="blank" title="social @|social_name|"><i
-              class="fa-brands fa-bounce fa-xl  fa-@|social_name|"></i></a>
+        </nav>
+        <div>
 
-          }))
 
-          @(define my_socials (hash
-          "github" "https://github.com/idanmaman2"
-          "twitter" "https://twitter.com/idanmaman451180"
-          "telegram" "https://t.me/IdanMaman"
-          ))
+          <div class="container" style="margin-bottom:5vh;margin-top:5vh;" class="row">
+            <!-- Main column -->
+            <div id="content" class="col-md-12">
+              @(when (string-ci=? uri-path
+              (string-append uri-prefix
+              "/index.html"))
+              @list{
+              <div class="mb-5 alert alert-primary bg-primary bg-opacity-25 text-center" role="alert">
+                <h1 class="alert-heading display-5">SUPDAWG? </h1>
+                <p class="h5 mt-2 font-weight-light"> Idan Maman's Personal Blog <i class="fa-solid fa-xl fa-kiwi-bird "></i>
+                </p>
+              </div>
+              })
+              @(when tag
+              @list{<h1>Posts tagged <em>@|tag|</em></h1>})
+              @;{ The main page contents are in @contents }
+              @|contents|
+              <footer>
+                <hr />
+                @(define (share-follow-button social_name link)
+                (let ([a "hello world"])
+                @list{
+                <a href="@|link|" target="blank" title="social @|social_name|"><i
+                    class="fa-brands fa-bounce fa-xl  fa-@|social_name|"></i></a>
 
-          @(define (craft_my_socials)
-          @(hash-map
-          my_socials
-          (lambda (k v) (share-follow-button k v))
-          )
-          )
-          <p>@craft_my_socials[]</p>
-          <p>Site generated
-            by <a href="https://github.com/greghendershott/frog">Frog</a>,
-            the <strong>fr</strong>ozen bl<strong>og</strong> tool.</p>
-          <p>Using <a href="https://getbootstrap.com/docs/5.2/content/typography/">Bootstrap 5.3</a>.</p>
-          <p><em>All the content is under the MIT license use it how u want how much u want </em>.</p>
-        </footer>
+                }))
+
+                @(define my_socials (hash
+                "github" "https://github.com/idanmaman2"
+                "twitter" "https://twitter.com/idanmaman451180"
+                "telegram" "https://t.me/IdanMaman"
+                ))
+
+                @(define (craft_my_socials)
+                @(hash-map
+                my_socials
+                (lambda (k v) (share-follow-button k v))
+                )
+                )
+                <p>@craft_my_socials[]</p>
+                <p>Site generated
+                  by <a class="link-warning" href="https://github.com/greghendershott/frog">Frog</a>,
+                  the <strong>fr</strong>ozen bl<strong>og</strong> tool.</p>
+                <p>Using <a class="link-warning" href="https://getbootstrap.com/docs/5.2/content/typography/">Bootstrap
+                    5.3</a>.</p>
+                <p><em>All the content is under the MIT license use it how u want how much u want </em>.</p>
+              </footer>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-
-
-
-  </div>
-  <!-- </body> JS -->
-  <script type="text/javascript" src="@|uri-prefix|css/bootstrap-5.3.2-dist 2/js/bootstrap.bundle.min.js"></script>
-  <script>
-    function myFunction() {
-      console.log("IDK")
-    }
-  </script>
+    <!-- </body> JS -->
+    <script type="text/javascript" src="@|uri-prefix|css/bootstrap-5.3.2-dist 2/js/bootstrap.bundle.min.js"></script>
+    <script>
+    </script>
 </body>
 
 </html>
