add my linked in

--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -138,7 +138,8 @@
                 @(define my_socials (hash
                 "github" "https://github.com/idanmaman2"
                 "twitter" "https://twitter.com/idanmaman451180"
-                "telegram" "https://t.me/IdanMaman"
+                "telegram" "https://t.me/IdanMaman" 
+                "linkedin" "https://www.linkedin.com/in/idan-maman-bb4b771bb"
                 ))
 
                 @(define (craft_my_socials)
