--- a/About.html
+++ b/About.html
@@ -128,6 +128,8 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
                        class="fa-brands fa-bounce fa-xl  fa-telegram"></i></a>
                    <a href="https://github.com/idanmaman2" target="blank" title="social github"><i
                        class="fa-brands fa-bounce fa-xl  fa-github"></i></a>
+                   <a href="https://www.linkedin.com/in/idan-maman-bb4b771bb" target="blank" title="social linkedin"><i
+                       class="fa-brands fa-bounce fa-xl  fa-linkedin"></i></a>
                    <a href="https://twitter.com/idanmaman451180" target="blank" title="social twitter"><i
                        class="fa-brands fa-bounce fa-xl  fa-twitter"></i></a>
                 </p>
