--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -39,11 +39,10 @@
   @(when rel-prev @list{
   <link rel="prev" href="@|rel-prev|">})
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="@|uri-prefix|/css/bootstrap-5.3.2-dist 2/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="@|uri-prefix|/css/bootstrap_5_3_2/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="@|uri-prefix|/css/pygments.css">
   <link rel="stylesheet" type="text/css" href="@|uri-prefix|/css/scribble.css">
   <link rel="stylesheet" type="text/css" href="@|uri-prefix|/css/custom.css">
-  <link rel="stylesheet" type="text/css" href="@|uri-prefix|/css/all.min.css">
   <link href="@|uri-prefix|/css/fontawesome-free-6.4.2-web/css/fontawesome.css" rel="stylesheet">
   <link href="@|uri-prefix|/css/fontawesome-free-6.4.2-web/css/brands.css" rel="stylesheet">
   <link href="@|uri-prefix|/css/fontawesome-free-6.4.2-web/css/solid.css" rel="stylesheet">
@@ -55,10 +54,9 @@
 
   <div style="position: relative;width: 100%; height: 100%">
     <div>
-      <div style="position: fixed;width: 100%; height: 100%">
-        <canvas id="myCanvas" style="touch-action:none;width: 100%; height: 100%"></canvas>
-      </div>
-      <div class="position: absolute; top: 0; left: 0;width: 100%; height: 100%">
+  
+
+      <div style="z-index: 2;position: absolute; top: 0; left: 0;width: 100%; height: 100%">
 
 
         <!-- A standard Twitter Bootstrap nav bar -->
@@ -160,9 +158,13 @@
           </div>
         </div>
       </div>
+      <div style="z-index: 1;position: fixed;width: 100%; height: 100%">
+        <canvas id="myCanvas" style="touch-action:none;width: 100%; height: 100%"></canvas>
+      </div>
+    
     </div>
     <!-- </body> JS -->
-    <script type="text/javascript" src="@|uri-prefix|css/bootstrap-5.3.2-dist 2/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="@|uri-prefix|/css/bootstrap_5_3_2/js/bootstrap.bundle.min.js"></script>
     <script>
     </script>
 </body>
