--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -22,6 +22,13 @@
   (string-ci=? uri-path
   (string-append uri-prefix
   "/About.html"))
+
+  (string-prefix? 
+  uri-path
+  (string-append uri-prefix
+  "/tags/")
+  )
+
   )
 
   @list{
