--- a/_src/index-template.html
+++ b/_src/index-template.html
@@ -18,7 +18,6 @@
   
   @(when more?
     @list{<footer>
-      
-            <button type="button" class="border-primary btn btn-outline-primary mb-3 mt-3" ><a class="non_link_text" href='@|uri-path|' >read this article</a></button>
+            <button type="button" class="border-primary btn btn-outline-primary mb-3 mt-3 read_next" ><a class="non_link_text" href='@|uri-path|' >read this article</a></button>
           </footer>})
 </article>
