--- a/About.html
+++ b/About.html
@@ -155,7 +155,7 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
           </div>
         </div>
       </div>
-      <div style="z-index: 1;position: fixed;width: 100%; height: 100%">
+      <div style="z-index: 1;position: sticky;width: 100%; height: 100%">
         <canvas id="myCanvas" style="touch-action:none;width: 100%; height: 100%"></canvas>
       </div>
 
