--- a/About.html
+++ b/About.html
@@ -156,7 +156,7 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
         </div>
       </div>
       <div style="position: relative; width: 100%; height: 100vh; overflow: hidden;">
-        <canvas id="myCanvas" style="position: fixed; top: 0; left: 0; touch-action: none; width: 100%; height: 100%;"></canvas>
+        <canvas id="myCanvas" style="position: sticky; top: 0; left: 0; touch-action: none; width: 100%; height: 100%;"></canvas>
       </div>
 
     </div>
